# db-sync-studio

./: .gitignore  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: quality.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: credential.rs  lib.rs  main.rs
src-tauri/src/commands/: compare_commands.rs  connection_commands.rs  mod.rs
src-tauri/src/db/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/diff/: data_diff.rs  mod.rs
src-tauri/src/sqlgen/: mod.rs
src-tauri/src/storage/: mod.rs
src/api/: dbSyncApi.ts
src/components/: ComingSoon.tsx  EnvironmentTag.tsx  SqlCodePreview.tsx  schemaCompare.tsx
src/i18n/: index.tsx
src/pages/: ConnectionsPage.tsx  DataSyncPage.tsx  HistoryPage.tsx  OverviewPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/types/: index.ts
src/utils/: connection.ts  defaults.ts  format.ts  input.ts
