[package]
name = "db-sync-studio"
version = "0.1.1"
description = "Local-first database schema and data comparison tool"
authors = ["ssnoodles <ssnoodles0226@gmail.com>"]
edition = "2021"
repository = "https://github.com/SShnoodles/db-sync-studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db_sync_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
mysql = { version = "26", features = ["native-tls"] }
postgres = "0.19"
postgres-native-tls = "0.5"
native-tls = "0.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
